# datasize-rs

datasize/: Cargo.toml
datasize/src/: lib.rs  prost_types.rs  std.rs  time.rs  uuid.rs
datasize_derive/src/: lib.rs
