[package]
name = "datasize"
version = "0.2.11"
authors = [ "Marc Brinkmann <marc@casperlabs.io>" ]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simplified heap memory size estimator"
documentation = "https://docs.rs/datasize"
repository = "https://github.com/casperlabs/datasize-rs"

[features]
default = ["std"]
detailed = ["std", "serde", "datasize_derive/detailed"]
fake_clock-types = ["fake_instant"]
futures-types = ["futures"]
smallvec-types = ["smallvec", "std"]
std = []
tokio-types = ["tokio"]
uuid-types = ["uuid"]
time-types = ["time"]

[dependencies]
datasize_derive = { version = "0.2.11" }
fake_instant = { version = "0.4.0", optional = true }
futures = { version = "0.3.5", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
smallvec = { version = "1.4.2", optional = true }
tokio = { version = "0.2.22", default-features = false, optional = true, features = [
  "rt-core",
  "sync",
] }
time = { version = "0.3.12", optional = true }
uuid = { version = "1.1.2", optional = true }

[package.metadata.docs.rs]
all-features = true
